--- a/packages/web-ui/src/css/global.less
+++ b/packages/web-ui/src/css/global.less
@@ -82,6 +82,12 @@ button {
     }
 }
 
+.ant-radio-group .ant-radio-wrapper,
+.ant-checkbox-group .ant-checkbox-wrapper,
+.ant-checkbox-group {
+    line-height: unset; //Use parent line height for vertical centering
+}
+
 ::placeholder {
     color: #ccc;
 }
